Update author info and replace placeholder names with generic examples

--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "mongodb",
     "full-stack"
   ],
-  "author": "Your Name",
+  "author": "Kamran",
   "license": "MIT",
   "dependencies": {
     "emoji-picker-react": "^4.12.2"
