Major code cleanup and optimization
 Improvements:
- Fixed typos in comments and function names
- Removed unused imports and console statements
- Added comprehensive input validation
- Standardized code formatting and spacing
- Added JSDoc comments for better documentation
- Created centralized configuration and constants
- Removed generated files from repository
- Updated .gitignore for better file management

 Technical changes:
- Replaced hardcoded values with constants
- Improved error handling and validation
- Enhanced security with proper input sanitization
- Better code organization and structure
- Consistent naming conventions throughout

--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,14 @@ yarn-error.log*
 .env.*.local
 backend/.env
 
+# Generated files
+*.xlsx
+*.csv
+
+# Upload directory contents (keep directory structure)
+backend/upload/*
+!backend/upload/.gitkeep
+
 # OS files
 .DS_Store
 Thumbs.db
